/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine_examples.pingh.sessions;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.sessions";
option java_outer_classname = "TokenMonitorProto";
option java_multiple_files = true;

import "spine_examples/pingh/sessions/identifiers.proto";
import "google/protobuf/timestamp.proto";

// A process that observes the expiration of the GitHub access token.
//
// This process sends an `UpdateToken` command when the current access token expires.
// If a new access token for the session is not obtained within one minute of the update request,
// it sends another `UpdateToken` command. This cycle continues until
// a new access token is received.
//
// Token observation begins when the user logs in and ends when the user logs out.
//
message TokenMonitor {
    option (entity) = { kind: PROCESS_MANAGER };

    // The identifier of the token expiration monitoring process.
    TokenMonitorId id = 1;

    // The expiration time of the token.
    google.protobuf.Timestamp when_expires = 2 [(required) = true];

    // The time when the last token update command was sent.
    //
    // This field remains empty if the access token has not expired.
    //
    google.protobuf.Timestamp when_update_requested = 3;
}
